[tool.poetry]
name = "app"
version = "0.1.0"
description = "application"
authors = ["readycodebase <hello@readycodebase.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
agentql = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
